clusters/k3s-cluster/apps/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
  labels:
    name: minio-tenant
